--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@wojtekmaj/react-daterange-picker": "^4.1.0",
     "axios": "^1.1.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
+    "react-tailwindcss-datepicker": "^1.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
